embed emoji in svg and fix layout issues

--- a/static/css/cards.css
+++ b/static/css/cards.css
@@ -155,10 +155,9 @@
 
 .ip-address {
   display: inline-block;
-  white-space: nowrap;
-  width: -moz-fit-content;
-  width: -webkit-fit-content;
-  width: fit-content;
+  max-width: 100%;
+  word-break: break-all;
+  white-space: normal;
 }
 
 
